--- a/package.json
+++ b/package.json
@@ -2,16 +2,21 @@
   "name": "codest",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nsur.github.io/viaplay-technical-task/",
   "dependencies": {
+    "gh-pages": "^4.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "save-dev": "0.0.1-security"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
